--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "papercss": "^1.9.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.57.1"
   }
 }
