--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "mongoose": "^6.8.3",
     "next": "13.1.1",
     "papercss": "^1.9.1",
     "react": "18.2.0",
