--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -19,6 +20,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "sass": "^1.57.1"
   }
 }
