--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.2.3",
     "eslint": "8.31.0",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "uuid": "^9.0.0"
   }
 }
