--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.1",
     "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
