--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "mongoose": "^6.8.3",
